--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="recommned.html">Recommend</a>
+                        <a class="nav-link" href="/recommend">Recommend</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
