--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,10 @@
     <title>Book recommdeation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="static\style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -51,7 +54,7 @@
                         <img src={{image_url[i]}} alt="Book image">
                         <h2 class = "text">{{book_name[i]}}</h2>
                         <h2 class = "text">{{Book_Author[i]}}</h2>
-                        <h2 class = "text">Avg. Rating - {{Avg_Rating[i]}}</h2>
+                        <h2 class = "text">Avg. Rating - {{Avg_Rating[i]}}/10</h2>
                         <h2 class = "text">Votes- {{Number_of_Rating[i]}}</h2>
                     </div>
                 </div>
@@ -60,6 +63,35 @@
         </div>
     </div>
 </body>
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <img src="static\images\inkfinder.svg" alt="InkFinder Logo " width="40" height="34">
+          </a>   
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2024 INK-FINDER, Inc</span>
+      </div>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3">
+            <a class="text-body-secondary" href="https://x.com/Shantnupsph?t=gOUxGsmCl9-oqoxmY_hSTQ&s=09">
+              <i class="bi bi-twitter" style="font-size: 24px;"></i>
+            </a>
+          </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="https://github.com/Shantnu-singh">
+              <i class="bi bi-github" style="font-size: 24px;"></i>
+            </a>
+          </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="https://in.linkedin.com/in/shantnu-singh-70400a22b">
+              <i class="bi bi-linkedin" style="font-size: 24px;"></i>
+            </a>
+          </li>
+          
+      </ul>
+    </footer>
+  </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
