--- a/static/style.css
+++ b/static/style.css
@@ -60,8 +60,8 @@ h1.text {
 
 .card img {
     width: 100%;
-    height: 300px;
-    object-fit: cover;
+    height: 500px;
+    object-fit: contain;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -95,6 +95,10 @@ h1.text {
     }
 
     .card img {
+        width: 100%;
         height: 200px;
+        object-fit: contain;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
     }
 }
