--- a/templates/recommned.html
+++ b/templates/recommned.html
@@ -16,8 +16,8 @@
     <nav class="navbar sticky-top bg-body-tertiary">
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="#">
-                <img src="static\images\inkfinder.svg" alt="Bootstrap" width="30" height="24"> 
+            <a class="navbar-brand" href="/">
+                <img src="static\images\inkfinder.svg" alt="Bootstrap" width="40" height="34"> 
                 Ink Finder
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="/recommend">Recommend</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="/contact">Contact</a>
                     </li>
                 </ul>
             </div>
